--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ _autosave-*
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
+*.kicad_pcb.lck
+*.kicad_sch.lck
+\#*
 
 # Netlist files (exported from Eeschema)
 *.net
@@ -27,3 +30,7 @@ fp-info-cache
 # Exported BOM files
 *.xml
 *.csv
+LTC3105_Eval/bom/*
+
+# Exported PCB production files
+LTC3105_Eval/prod/*
